--- a/styles/index.css
+++ b/styles/index.css
@@ -6,4 +6,6 @@ body, div, h1, h2, h3, h4, h5, h6, p {
 body{
     width: 100%;
     height: 100%;
+    background: url('/images/background_v1.png') no-repeat center center fixed;
+    background-size: cover;
 }
