--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,11 @@
 body, div, h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
+    font-size: 16px;
+    font-family: monospace;
+}
+body{
+    font-size: 16px;
 }
 
 body{
@@ -8,4 +13,28 @@ body{
     height: 100%;
     background: url('/images/background_v2.png') no-repeat center center fixed;
     background-size: cover;
+}
+
+h1.blog-title{
+    color: dimgray;
+    font-family: monospace;
+    font-size: 2em;
+    padding-left: .5em;
+}
+div.passage-navigate{
+    display: block;
+    margin: 1em;
+    padding: 1em;
+    
+    width: 18em;
+    
+    background-color: rgba(200,200,255, 0.6);
+}
+div.passage-navigate a{
+    display: block;
+    text-decoration: none;
+    color: dimgray;
+    font-weight: bold;
+    font-size: 1.2em;
+    cursor: pointer;
 }
