--- a/styles/index.css
+++ b/styles/index.css
@@ -11,7 +11,7 @@ body{
 body{
     width: 100%;
     height: 100%;
-    background: url('/images/background_v3.jpg') no-repeat center center fixed;
+    background: rgb(218, 218, 218) url('/images/background_v3.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
