--- a/blog/themes/landscape/layout/_partial/after-footer.ejs
+++ b/blog/themes/landscape/layout/_partial/after-footer.ejs
@@ -14,7 +14,7 @@
 </script>
 <% } %>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
 
 <% if (theme.fancybox){ %>
   <%- css('fancybox/jquery.fancybox') %>
